# GAZEBO_SIM

./: README.md
ssafy_ws/install/: local_setup.sh  setup.sh
ssafy_ws/install/250114/share/250114/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ssafy_ws/install/my_python_pkg/share/my_python_pkg/: package.sh  package.xml
ssafy_ws/install/simple_car_tf/lib/simple_car_tf/: move_car
ssafy_ws/install/simple_car_tf/share/simple_car_tf/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ssafy_ws/log/: latest_build
ssafy_ws/src/: simple_car.urdf  simple_robot.urdf
ssafy_ws/src/250114/: setup.cfg  setup.py
ssafy_ws/src/250114/models/: simple.urdf  test.urdf.xacro
ssafy_ws/src/my_python_pkg/: setup.py
ssafy_ws/src/my_python_pkg/my_python_pkg/: my_node.py
ssafy_ws/src/simple_car_tf/: setup.py
ssafy_ws/src/simple_publisher/: setup.py
ssafy_ws/src/simple_publisher/simple_publisher/: simple_publisher.py
ssafy_ws/src/simple_subscriber/: setup.py
ssafy_ws/src/simple_subscriber/simple_subscriber/: simple_subscriber.py
ssafy_ws/src/ssafy_publisher_subscriber/: CMakeLists.txt
ssafy_ws/src/ssafy_publisher_subscriber/src/: ssafy_publisher.cpp  ssafy_subscriber.cpp
ssafy_ws/src/tf_broadcaster/: setup.py
ssafy_ws/src/tf_broadcaster/tf_broadcaster/: tf_broadcaster.py
ssafy_ws/src/turtle_controller/: package.xml  setup.py
ssafy_ws/src/turtle_controller/turtle_controller/: turtle_controller.py
ssafy_ws/src/turtle_spawner/: package.xml  setup.py
ssafy_ws/src/yolo_pkg/: setup.py
(+689 files in other folders)
